[gd_scene load_steps=2 format=2]

[ext_resource path="res://furniture/InteractBox.gd" type="Script" id=1]

[node name="InteractBox" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
